# controller/index.js
@@ -16,12 +16,12 @@ const getAll = async (req, res, next) => {
 
 const getSingle = async (req, res, next) => {
   try{
-  const userId = new ObjectId(req.params.id);
+  const recipeId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
     .db('Recipes')
     .collection('recipes')
-    .find({ _id: userId });
+    .find({ _id: recipeId });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
@@ -41,6 +41,7 @@ const createNewRecipe = async(req, res) => {
       yield: req.body.yield,
       mealType: req.body.mealType
     };
+    
     const result = await mongodb
     .getDb()
     .db('Recipes')
@@ -58,13 +59,57 @@ const createNewRecipe = async(req, res) => {
 };
 
 const updateRecipe = async (req, res) => {
-
+  try{
+    const recipeId = new ObjectId(req.params.id);
+    const recipe = {
+      dishName: req.body.dishName,
+      prepTime: req.body.prepTime,
+      cookTime: req.body.cookTime,
+      yield: req.body.yield,
+      mealType: req.body.mealType
+    };
+    if (!recipeId) {
+      res.status(400).send({ message: 'Invalid recipe ID Supplied' });
+      return;
+    }
+    const result = await mongodb
+      .getDb()
+      .db('Recipes')
+      .collection('recipes')
+      .replaceOne({ _id: recipeId }, recipe);
+    
+    if (result.modifiedCount > 0){
+      res.status(204).send();
+    } else {
+      res.status(500).json(result.error || 'Some error occurred while updating the recipe.');
+    }
+    } catch (error) {
+      res.status(500).json(error);
+    }
 };
 
 const deleteRecipe = async (req, res) => {
-
+  try {
+    const recipeId = new ObjectId(req.params.id);
+    if (!recipeId) {
+      res.status(400).send({ message: 'Invalid recipe ID Supplied' });
+      return;
+    }
+    const result = await mongodb
+    .getDb()
+    .db('Recipes')
+    .collection('recipes')
+    .deleteOne({ _id: recipeId }, true);
+    console.log(response);
+    if (result.deletedCount > 0){
+      res.status(200).send();
+    } else {
+      res.status(500).json(result.error || 'Some error occurred while deleting the contact.');
+    }
+    } catch (error) {
+      res.status(500).json(error);
+    }
 };
-
 
 
 module.exports = { getAll, getSingle, createNewRecipe, updateRecipe, deleteRecipe};
